# worker

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  DEVELOPMENT.md  GITHUB_SETTINGS.md  PROJECT_SPEC.md  README.md
docs/DECISIONS/: 0001-tech-stack.md  0002-documentation-structure.md
docs/FEATURES/: image-format-converter.md  qr-code.md
docs/PLANS/: 2026-06-10-scaffold-tauri.md
docs/RUNBOOKS/: release.md  troubleshooting.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: image_format.rs  mod.rs  qr_code.rs
src-tauri/src/tools/: mod.rs
src/app/: App.test.tsx  App.tsx  styles.css
src/components/: ToolSidebar.tsx
src/tools/image-format-converter/: ImageFormatConverterTool.test.tsx  ImageFormatConverterTool.tsx  imageFormatConversion.test.ts  imageFormatConversion.ts
src/tools/qr-code/: QrCodeTool.tsx  QrCodeToolPlaceholder.tsx  qrCodeBackground.ts  qrCodeClipboard.test.ts  qrCodeClipboard.ts  qrCodeFileName.ts  qrCodeImage.test.ts  qrCodeImage.ts  qrCodePng.test.ts  qrCodePng.ts  qrCodeSvg.test.ts  qrCodeSvg.ts  qrCodeValidation.test.ts  qrCodeValidation.ts
