[package]
name = "worker"
version = "0.1.0"
description = "Local macOS utility app for repeated work tasks"
authors = ["Worker contributors"]
edition = "2021"

[lib]
name = "worker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
